	  new file; Implement VFAT long file name support.
	* fs/fat/fat_fat32dirent.c:  The configuration CONFIG_FAT_LCNAMES has
	  been around for some time but never tested until now.  This setting
	  will mimic the NT 8.3 file name behavior:  File names or extensions 
	  may be all upper or all lower case (but not mixed).  If
	  CONFIG_FAT_LCNAMES is not selected, all filenames are strictly upper
	  case.
	* configs/stm3210e-eval/nsh2:  Console is back on UART1; Added
	  examplex/nx as an NSH "built-in" command as a demonstration.
	* fs/fat/fs_fat32dirent.c:  Fix an important bug in the directory
	  allocation (fat_allocatedirentry()).  I looks like it could be
	  initializing the wrong sectors! NOTE:  This function was in
	  fs_fat32utils.c in earlier releases.
	* arch/arm/src/stm32_sdio.c: Correct an important DMA-related bug;
	  SDIO transfer completion events and DMA completion eventes were
	  not being coordinated correctly.
	* configs/stm3210e-eval/nsh2: Enable FAT long file name support
	* sched/sem_timedwait.c: Add the standard sem_timedwait() interface.
	* graphics/nxfonts/nxfonts_getfont.c, nxfonts_bitmap.c,
	  Makefile.source, and include/nuttx/nxfonts.h: Support for multiple
	  fonts included.  A new interface, nxf_getfonthandle() takes a font
	  ID and returns a handle that is now used at all other font interfaces
	  to specify which of the multiple fonts to use.
	* arch/arm/src/lpc17xx/lpc17_syscon.h: Fix typo (reported by Li Zhuoyi).
	* configs/stm3210e-eval/nsh2: Extended to support two new commands:
	  'msconn' will connect the USB mass storage device; 'msdis' will
	  disconnect the USB storage device.
	* tools/bdf-converter.c.  This C file is used to build the bdf-converter
	  program.  The bdf-converter program be used to convert fonts in Bitmap
	  Distribution Format (BDF) into fonts that can be used in the NX graphics
	  system.
	* include/nuttx/nx:  Move all NX header files from include/nuttx to 
	  include/nuttx/nx.